        $ type -t typeset; whence -t sh
        builtin
        file

- Fixed a crash or freeze that would occur on Linux when using Ctrl+C to
  interrupt a command substitution containing a pipe in an interactive shell.

- Fixed a crash that could occur while processing a here-document while
  xtrace (set -x) is on and the $PS4 prompt contains parameter expansions or
  command substitutions.

2021-12-26:

- Listing aliases or tracked aliases in a script no longer corrupts
  shcomp's generated bytecode.

- Listing specific aliases with 'alias -p' and specific tracked aliases
  with 'alias -pt' now works as documented. This means that the following
  string of commands now works as you would expect:
	$ hash -r; unalias -a
	$ alias foo=bar; hash cat
	$ alias -p foo; alias -pt cat
	alias foo=bar
	alias -t cat

- As a result of the above fix, listing all tracked aliases with 'alias -pt'
  now prints commands that can be reused to recreate the tracked aliases.

- Attempting to list a non-existent alias or tracked alias with the -p option
  now causes an error and sets the exit status to the number of non-existent
  aliases passed.

- Attempting to list 256 non-existent aliases now errors out with the exit
  status set to one.

2021-12-22:

- Process substitutions run in a profile script no longer print their
  process ID when run.

2021-12-21:

- Fixed a bug that caused subshells (such as code blocks in parentheses) to
  partially behave like the interactive main shell after running anything
  that invokes the parser. For example:
	$ (eval :; sleep 1 & echo done)
	[1]	30909      <--- incorrect job control output from subshell
	done

- Fixed: after suspending (Ctrl+Z) a subshell that is running an external
  command, resuming the subshell with 'fg' failed and the job was lost.
	$ (vi)    <--- press Ctrl+Z
	[2] + Stopped                  (vi)
	$ fg
	(vi)      <--- vi failed to resume; immediate return to command line
	$ fg
	ksh: no such job

2021-12-20:
